refactored addNewChoreCard and deleteChoreCard

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
       </div>
 
       <h2>My Chores</h2>
+      <!-- parent node -->
       <div class='col-md-12' id="container">
         <div id="chore-list">
-          <!-- insert cards! -->
+          <!-- insert cards here! -->
         </div>
       </div>
 
